force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/GLScheduler__Scheduled_Report_Operations__c.object-meta.xml
<CustomObject>
    <label>Scheduled Report</label>
    <nameField>
        <label>Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>