force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/fields/GLScheduler__Active__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>