force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/fields/GLScheduler__Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__Batch_Size__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>