force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/fields/GLScheduler__Campaign__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Scheduled_Report_Operations</relationshipName>
    <type>Lookup</type>
</CustomField>