force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/fields/GLScheduler__Campaign_ID_Column_Label__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__Campaign_ID_Column_Label__c</fullName>
    <label>Campaign ID Column Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>