force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/fields/GLScheduler__Campaign_Member_Added_Status__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__Campaign_Member_Added_Status__c</fullName>
    <label>Campaign Member Added Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>