force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/fields/GLScheduler__Campaign_Member_Process__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__Campaign_Member_Process__c</fullName>
    <label>Campaign Member Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Only Add Members</fullName>
                <default>true</default>
                <label>Only Add Members</label>
            </value>
            <value>
                <fullName>Delete</fullName>
                <label>Add Members AND Delete Members Not In Report</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>