force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/fields/GLScheduler__DateTIme_Field__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__DateTIme_Field__c</fullName>
    <label>DateTIme Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>