force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/fields/GLScheduler__Days_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__Days_of_the_Week__c</fullName>
    <inlineHelpText>Choose which days in the week you want this to process. For example, select &apos;Monday&apos; and it will only run on Mondays. 

You cannot select a week day and a day in the month.</inlineHelpText>
    <label>Days of the Week</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EVERY DAY</fullName>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>