force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/fields/GLScheduler__Hour__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__Hour__c</fullName>
    <inlineHelpText>Select which hours of the day you want it to run. If you select &quot;EVERY HOUR&quot; it will run 24 times a day. If you want it to only run once a day make sure you select only one time. 

0 = 12am
1 = 1am
.... 23 = 11pm</inlineHelpText>
    <label>Hour of Day</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EVERY HOUR</fullName>
                <default>true</default>
                <label>EVERY HOUR</label>
            </value>
            <value>
                <fullName>00</fullName>
                <label>0</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>4</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>5</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>6</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>7</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>8</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>9</label>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>19</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>23</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>