force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/fields/GLScheduler__Include_in_Batch__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__Include_in_Batch__c</fullName>
    <formula>GLScheduler__Active__c &amp;&amp;
!isblank(GLScheduler__Report_ID__c ) &amp;&amp;
!isblank(GLScheduler__Report_Contact_or_Lead_ID_Column_Name__c ) &amp;&amp;  

!isblank( GLScheduler__Month__c ) &amp;&amp;    
!isblank( GLScheduler__Hour__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in Batch</label>
    <type>Checkbox</type>
</CustomField>