force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/fields/GLScheduler__Last_Ran__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__Last_Ran__c</fullName>
    <label>Last Ran</label>
    <type>DateTime</type>
</CustomField>