force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/fields/GLScheduler__Report_Contact_or_Lead_ID_Column_Label__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__Report_Contact_or_Lead_ID_Column_Label__c</fullName>
    <label>Report Contact or Lead ID Column Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>