force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/fields/GLScheduler__Report_ID__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__Report_ID__c</fullName>
    <label>Report ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>