force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/fields/GLScheduler__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>