force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/recordTypes/GLScheduler__Add_Campaign_Members.recordType-meta.xml
<RecordType>
    <fullName>GLScheduler__Add_Campaign_Members</fullName>
    <active>true</active>
    <label>Add Campaign Members</label>
</RecordType>