force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/recordTypes/GLScheduler__Update_Field_on_Records.recordType-meta.xml
<RecordType>
    <fullName>GLScheduler__Update_Field_on_Records</fullName>
    <active>true</active>
    <label>Update Field on Records</label>
</RecordType>