force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/validationRules/GLScheduler__Campaign_Enforce.validationRule-meta.xml
<ValidationRule>
    <fullName>GLScheduler__Campaign_Enforce</fullName>
    <active>false</active>
    <errorConditionFormula>isblank( GLScheduler__Campaign__c )
&amp;&amp;
CONTAINS( RecordType.Name,&quot;Campaign&quot; )</errorConditionFormula>
    <errorDisplayField>GLScheduler__Campaign__c</errorDisplayField>
    <errorMessage>Please enter a campaign</errorMessage>
</ValidationRule>