force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/validationRules/GLScheduler__Choose_One_Day_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>GLScheduler__Choose_One_Day_Field</fullName>
    <active>true</active>
    <errorConditionFormula>!isblank( (GLScheduler__Days_in_month__c) )
&amp;&amp;
!isblank( (GLScheduler__Days_of_the_Week__c) )</errorConditionFormula>
    <errorDisplayField>GLScheduler__Days_in_month__c</errorDisplayField>
    <errorMessage>You can only specify either the day in the month or the day of the week.</errorMessage>
</ValidationRule>