force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations__c/listViews/GLScheduler__All.listView-meta.xml
<ListView>
    <fullName>GLScheduler__All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>GLScheduler__Campaign_Member_Added_Status__c</columns>
    <columns>GLScheduler__Days_in_month__c</columns>
    <columns>GLScheduler__Days_of_the_Week__c</columns>
    <columns>GLScheduler__Hour__c</columns>
    <columns>GLScheduler__Month__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>